Fix for .align-full (no longer requires gap for left border on page body)

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -5,24 +5,6 @@
 /*$primary:                       $dark-blue;
 $secondary:                     $burgundy;
 $tertiary:                      $grey;*/
-/*@mixin align-wide {
-  max-width: none;
-  width: calc(100vw - 2.4rem);
-  margin-left: calc(-50vw + 50% + 1.2rem);
-  margin-right: calc(-50vw + 50% + 1.2rem);
-
-  @media (min-width: $wrap-full-gutter-width) {
-    width: calc(90vw);
-    margin-left: calc(-45vw + 50%);
-    margin-right: calc(-45vw + 50%);
-  }
-
-  @media (min-width: $wrap-width + 10rem) {
-    width: $wrap-width;
-    margin-left: calc(-43rem + 50%);
-    margin-right: calc(-43rem + 50%);
-  }
-}*/
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document ========================================================================== */
 /** 1. Correct the line height in all browsers. 2. Prevent adjustments of font size after orientation changes in iOS. */
@@ -905,24 +887,6 @@ input .sys_cms-form-error, textarea .sys_cms-form-error, select .sys_cms-form-er
 
 label.sys_cms-form-error::after { content: " [please complete this field]"; }
 
-/*@mixin align-wide {
-  max-width: none;
-  width: calc(100vw - 2.4rem);
-  margin-left: calc(-50vw + 50% + 1.2rem);
-  margin-right: calc(-50vw + 50% + 1.2rem);
-
-  @media (min-width: $wrap-full-gutter-width) {
-    width: calc(90vw);
-    margin-left: calc(-45vw + 50%);
-    margin-right: calc(-45vw + 50%);
-  }
-
-  @media (min-width: $wrap-width + 10rem) {
-    width: $wrap-width;
-    margin-left: calc(-43rem + 50%);
-    margin-right: calc(-43rem + 50%);
-  }
-}*/
 [class^="grid"] { clear: both; padding: 0; margin: 0 -0.75rem; }
 
 [class^="grid"]:after { content: ''; display: table; clear: both; }
@@ -1231,24 +1195,6 @@ label.sys_cms-form-error::after { content: " [please complete this field]"; }
 
 .title-grid__button .button { margin-bottom: 1.5rem; }
 
-/*@mixin align-wide {
-  max-width: none;
-  width: calc(100vw - 2.4rem);
-  margin-left: calc(-50vw + 50% + 1.2rem);
-  margin-right: calc(-50vw + 50% + 1.2rem);
-
-  @media (min-width: $wrap-full-gutter-width) {
-    width: calc(90vw);
-    margin-left: calc(-45vw + 50%);
-    margin-right: calc(-45vw + 50%);
-  }
-
-  @media (min-width: $wrap-width + 10rem) {
-    width: $wrap-width;
-    margin-left: calc(-43rem + 50%);
-    margin-right: calc(-43rem + 50%);
-  }
-}*/
 html { overflow-x: hidden; }
 
 body { overflow-x: hidden; }
@@ -1300,9 +1246,9 @@ iframe { border: none; }
 
 .align-center, .align-centre { margin-left: auto !important; margin-right: auto !important; }
 
-.align-full, .alignfull { max-width: none; width: calc(100vw - 0.5rem); margin-left: calc(-50vw + 50% + 0.25rem); margin-right: calc(-50vw + 50%); }
+.align-full, .alignfull { max-width: none; width: calc(100vw); margin-left: calc(-50vw + 50%); margin-right: calc(-50vw + 50%); }
 
-@media (min-width: 70rem) and (min-height: 40rem) { .align-full, .alignfull { width: calc(100vw - 2rem); margin-left: calc(-50vw + 50% + 1rem); } }
+@media (min-width: 70rem) and (min-height: 40rem) { .align-full, .alignfull { width: calc(100vw); margin-left: calc(-50vw + 50%); } }
 
 .wrap-wysiwyg:after { content: ''; display: table; clear: both; }
 
